tests/ui/unique_ptr_to_opaque.stderr
error[E0271]: type mismatch resolving `<outside::C as ExternType>::Kind == Trivial`
  --> $DIR/unique_ptr_to_opaque.rs:24:5
   |
24 |     cxx::UniquePtr::new(outside::C { a: 4 });
   |     ^^^^^^^^^^^^^^^^^^^ expected enum `Trivial`, found enum `cxx::kind::Opaque`
   |
   = note: required by `UniquePtr::<T>::new`
